tests/test75.rael.exp
Error [2:15]: A negative index is not allowed
| log :array at (0-1)
|               ^
