tests/test75.rael
:array { 1, 2, 3, 4 }
log :array at (0-1)
